# back_k

./: main.py  pyproject.toml
src/: config.py
src/api/: dependencies.py  hotels.py
src/migrations/: env.py
src/migrations/versions/: 54f071c5c8ef_initial_database.py  f4f67aa9c7c7_task3.py
src/models/: hotels.py  rooms.py
src/repositories/: base.py  hotels.py
src/schemas/: hotels.py
src/services/: base.py  hotels.py
src/utils/: database.py
