[tool.poetry]
name = "backend-kurs-practice"
version = "0.1.0"
description = ""
authors = ["alexander111222-max <shurak26@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.121.0"
sqlalchemy = "^2.0.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
